objects/Target_Metric__c.object
<CustomObject>
    <fields>
        <fullName>Column_No__c</fullName>
        <label>Column No</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_on_ScoreCard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on ScoreCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KONE_Report_URL__c</fullName>
        <label>KONE Report URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Row_No__c</fullName>
        <label>Row No</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOQL_Text__c</fullName>
        <label>SOQL Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TN_On_Scorecard__c</fullName>
        <label>TN On Scorecard</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Category__c</fullName>
        <label>Target Category</label>
        <picklist>
            <picklistValues>
                <fullName>Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hitrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share of LIS in OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMII MV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMII%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenders Created</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>UN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>is_Single_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Single Column?</label>
        <type>Checkbox</type>
    </fields>
    <label>Target Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>is_Single_Column__c</columns>
        <columns>Unit_of_Measure__c</columns>
        <columns>Target_Category__c</columns>
        <columns>Display_on_ScoreCard__c</columns>
        <columns>TN_On_Scorecard__c</columns>
        <columns>Order_No__c</columns>
        <columns>Row_No__c</columns>
        <columns>Column_No__c</columns>
        <columns>KONE_Report_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Metrics</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Display_on_ScoreCard_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Display_on_ScoreCard__c
 ,OR(ISBLANK(TN_On_Scorecard__c)
    ,ISBLANK(Order_No__c)
    ,ISBLANK(Row_No__c)
    ,ISPICKVAL(Column_No__c,&apos;&apos;)
    ,ISBLANK(KONE_Report_URL__c)
    ,ISBLANK(SOQL_Text__c)))</errorConditionFormula>
        <errorMessage>ScoreCard Setting Information section fields are required</errorMessage>
    </validationRules>
</CustomObject>